# center-point

./: README.md  pyproject.toml  show_sweeps_with_bbox.py
tools/: builder.py  create_dataset.py  train.py
tools/configs/: config.py
tools/configs/model/: default_point_pillar.py  default_point_pillar.yaml  default_voxel_net.yaml
tools/core/bbox/: box_np_ops.py  box_torch_ops.py
tools/core/input/: voxel_generator.py
tools/core/sampler/: preprocess.py  sample_ops.py
tools/core/utils/: dist_utils.py  misc.py
tools/datasets/: __init__.py  builder.py  create_gt_database.py  custom.py  dataset_wrappers.py  factory.py  pipelines.py
tools/datasets/loader/: build_loader.py  sampler.py
tools/datasets/nuscenes/: common.py  nuscenes.py
tools/datasets/pipelines/: __init__.py  compose.py  formating.py  loading.py  preprocess.py  test_aug.py
tools/datasets/utils/: create_gt_database.py  eval.py
tools/models/: center_point.py
tools/models/backbones/: __init__.py  point_pillars_scatter.py  sp_middle_resnet_fhd.py
tools/models/feature_extractors/: __init__.py  bev_feature_extractor.py
tools/models/heads/: __init__.py  center_head.py  dcn_sep_head.py  roi_head.py  sep_head.py
tools/models/losses/: fast_focal_loss.py  reg_loss.py  utils.py
tools/models/necks/: __init__.py  rpn.py
tools/models/normalizations/: dist_common.py  normalization.py
tools/models/pcd_encoders/: __init__.py  dynamic_voxel_encoder.py  pillar_feature_net.py  voxel_feature_extractor.py
tools/models/utils/: __init__.py  conv_module.py  (+2 more)
tools/solver/: fastai_optim.py  optim.py
(+14 files in other folders)
